--- a/src/app/compiler/compiler.component.html
+++ b/src/app/compiler/compiler.component.html
@@ -16,6 +16,13 @@
             </div>
           </div>
     </div>
+  <div class="container mb-3" *ngIf="uploadSpinner">
+      <button class="btn btn-primary" type="button" disabled>
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Loading...
+      </button>
+    </div>
+  
     <div class="container mb-2">
         <select class="browser-default custom-select col-md-3" name="size" [(ngModel)]="size">
             <option value="large">Large</option>
@@ -36,6 +43,14 @@
         </div>
         <button class="btn btn-info mt-3" (click)="compile()">Compile</button>
     </div>
+  
+  <div class="container mb-3" *ngIf="compileSpinner">
+      <button class="btn btn-primary" type="button" disabled>
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Loading...
+      </button>
+    </div>
+  
     <div class="container" *ngIf="output">
       <div>
         <textarea spellcheck="false" readonly class="form-control md-textarea mb-5 output p-3" length="120" rows="10">
