--- a/src/app/compiler/compiler.component.html
+++ b/src/app/compiler/compiler.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md mod-color mb-5">
   <div class="container p-3">
-    <h1 class="m-auto text-primary">Welcome to UCLID5 Compiler</h1>
+    <h1 class="m-auto text-primary">Welcome to UCLID5 WEB INTERFACE</h1>
   </div>
 </nav>
 <section>
